[Fix] Copy user types when transforming it to AccessHolderDto.